# nlp-mdpub

./: .gitignore  PLAN.md  README.md  config.yaml  pyproject.toml
examples/: about.md  contact.md  home.md  wheels.md
src/mdpub/: __main__.py  cli.py  config.py  settings.py
src/mdpub/cli/: __init__.py  cli.py  commands.py
src/mdpub/core/: export.py  models.py  parse.py  pipeline.py
src/mdpub/core/extract/: blocks.py  extract.py  sections.py
src/mdpub/core/utils/: diff.py  hashing.py  slug.py  tokens.py
src/mdpub/crud/: database.py  db.py  documents.py  memory_repo.py  models.py  repo.py  sql_models.py  sql_repo.py  tables.py  versioning.py
src/mdpub/parser/: diff.py  emit.py  models.py  parse.py  pipeline.py
src/mdpub/util/: fs.py  hashing.py
tests/: conftest.py  test_cli_smoke.py  test_frontmatter.py  test_incremental_ingest.py
tests/integration/cli/: test_build.py
tests/integration/pipeline/: test_pipeline.py
tests/unit/: conftest.py  test_config.py
tests/unit/core/: conftest.py  test_parse.py  test_pipeline.py  test_slug.py
tests/unit/core/extract/: test_blocks.py  test_extract.py  test_parse.py  test_sections.py
tests/unit/crud/: conftest.py  test_database.py  test_documents.py  test_export.py  test_models.py  test_tables.py  test_versioning.py
